--- a/utils/args.yaml
+++ b/utils/args.yaml
@@ -21,83 +21,38 @@ mosaic: 1.00000               # image mosaic (probability)
 mix_up: 0.00000               # image mix-up (probability)
 # classes
 names:
-  0: person
-  1: bicycle
-  2: car
-  3: motorcycle
-  4: airplane
-  5: bus
-  6: train
-  7: truck
-  8: boat
-  9: traffic light
-  10: fire hydrant
-  11: stop sign
-  12: parking meter
-  13: bench
-  14: bird
-  15: cat
-  16: dog
-  17: horse
-  18: sheep
-  19: cow
-  20: elephant
-  21: bear
-  22: zebra
-  23: giraffe
-  24: backpack
-  25: umbrella
-  26: handbag
-  27: tie
-  28: suitcase
-  29: frisbee
-  30: skis
-  31: snowboard
-  32: sports ball
-  33: kite
-  34: baseball bat
-  35: baseball glove
-  36: skateboard
-  37: surfboard
-  38: tennis racket
-  39: bottle
-  40: wine glass
-  41: cup
-  42: fork
-  43: knife
-  44: spoon
-  45: bowl
-  46: banana
-  47: apple
-  48: sandwich
-  49: orange
-  50: broccoli
-  51: carrot
-  52: hot dog
-  53: pizza
-  54: donut
-  55: cake
-  56: chair
-  57: couch
-  58: potted plant
-  59: bed
-  60: dining table
-  61: toilet
-  62: tv
-  63: laptop
-  64: mouse
-  65: remote
-  66: keyboard
-  67: cell phone
-  68: microwave
-  69: oven
-  70: toaster
-  71: sink
-  72: refrigerator
-  73: book
-  74: clock
-  75: vase
-  76: scissors
-  77: teddy bear
-  78: hair drier
-  79: toothbrush
+  0: Backpack
+  1: Bathroom accessory
+  2: Bed
+  3: Book
+  4: Bottle
+  5: Box
+  6: Cabinetry
+  7: Camera
+  8: Chair
+  9: Clock
+  10: Coffee cup
+  11: Computer keyboard
+  12: Computer monitor
+  13: Computer mouse
+  14: Couch
+  15: Furniture
+  16: Handbag
+  17: Kitchen appliance
+  18: Lamp
+  19: Laptop
+  20: Mirror
+  21: Mobile phone
+  22: Oven
+  23: Plastic bag
+  24: Plumbing fixture
+  25: Refrigerator
+  26: Shelf
+  27: Sink
+  28: Studio couch
+  29: Table
+  30: Tableware
+  31: Television
+  32: Tool
+  33: Vase
+  34: Washing machine
